<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/curRatesButton"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/curRatesButton"
            android:textColor="#FFFFFF"
            app:backgroundTint="#CC673AB7"
            app:iconTint="#FFFFFF" />

        <Button
            android:id="@+id/goldRateButton"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/goldRateButton"
            app:backgroundTint="#E6673AB7" />

        <Button
            android:id="@+id/currConverterButton"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/currConvertButton"
            app:backgroundTint="#FA673AB7" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>